--- a/app/src/main/res/layout/activity_edit_income_item.xml
+++ b/app/src/main/res/layout/activity_edit_income_item.xml
@@ -53,4 +53,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_income_item_name" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_income_item_wallet_operation_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/b_update_income_item" />
+
 </android.support.constraint.ConstraintLayout>
