--- a/app/src/main/res/layout/activity_edit_wallet.xml
+++ b/app/src/main/res/layout/activity_edit_wallet.xml
@@ -10,22 +10,20 @@
         android:id="@+id/et_edit_wallet_name"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/et_edit_wallet_amount" />
 
     <EditText
         android:id="@+id/et_edit_wallet_amount"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="numberDecimal"
@@ -40,7 +38,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/et_edit_wallet_amount"
         app:layout_constraintHorizontal_bias="0.0"
@@ -54,7 +51,6 @@
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
         android:text="Update"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount"
@@ -65,21 +61,10 @@
         android:layout_width="88dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:text="Delete"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount" />
-
-    <Button
-        android:id="@+id/b_add_wallet"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_wallet_amount"
-        app:layout_constraintRight_toLeftOf="@+id/b_update_wallet"
-        android:layout_marginRight="8dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_wallet_wallet_operation_list"
@@ -96,6 +81,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/b_add_wallet" />
+        app:layout_constraintTop_toBottomOf="@+id/b_delete_wallet" />
 
 </android.support.constraint.ConstraintLayout>
