--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,24 +35,33 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <ImageButton
                         android:id="@+id/test_button_add_income_item"
                         android:layout_width="79dp"
-                        android:layout_height="79dp"
-                        app:srcCompat="@android:drawable/ic_menu_add" />
+                        android:layout_height="79dp" />
 
                     <TextView
-                        android:id="@+id/test_text_view_income_item"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:id="@+id/test_view_income_item_amount"
+                        android:layout_width="79dp"
+                        android:layout_height="39dp"
+                        android:layout_gravity="top"
+                        android:gravity="center"
+                        android:text="@string/test_text_view_amount"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/test_view_income_item_name"
+                        android:layout_width="79dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="bottom"
+                        android:gravity="center"
                         android:text="@string/test_text_view_income_item"
-                        android:textAlignment="center" />
-                </LinearLayout>
+                        android:textSize="12sp" />
+                </FrameLayout>
 
             </LinearLayout>
 
