--- a/app/src/main/res/layout/activity_edit_expenditure.xml
+++ b/app/src/main/res/layout/activity_edit_expenditure.xml
@@ -44,6 +44,46 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/et_edit_expenditure_name" />
 
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/b_update_expenditure">
+
+        <TextView
+            android:id="@+id/tv_edit_expenditure_from_date"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18sp"
+            tools:text="12.12.2018г." />
+
+        <TextView
+            android:id="@+id/tv_edit_expenditure_to_date"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18sp"
+            tools:text="12.12.2018г." />
+
+        <ImageButton
+            android:id="@+id/ib_expenditure_refresh_from_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            app:srcCompat="@drawable/ic_autorenew_black_24dp" />
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_expenditure_cost_item_list"
         android:layout_width="0dp"
@@ -57,6 +97,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b_update_expenditure" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
 
 </android.support.constraint.ConstraintLayout>
