--- a/app/src/main/res/layout/activity_sqlite.xml
+++ b/app/src/main/res/layout/activity_sqlite.xml
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
@@ -197,7 +197,7 @@
             <LinearLayout
                 android:id="@+id/sqlInfoLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
             </LinearLayout>
